--- a/src/App.css
+++ b/src/App.css
@@ -274,6 +274,10 @@ html {
   border: 2px solid black;
 }
 
+header h1 {
+  margin: 0;
+}
+
 .wrapper {
   max-width: 1400px;
   width: 80%;
@@ -307,8 +311,67 @@ button {
   border: 1px solid transparent;
   transition: 300ms;
 }
-button:hover, button:focus {
+button:hover {
   background: white;
   color: black;
   border: 1px solid black;
+}
+
+textarea {
+  resize: none;
+  border: none;
+}
+
+header {
+  min-width: 100%;
+  background: red;
+}
+header .wrapper {
+  display: flex;
+}
+
+.loginBgContainer {
+  display: flex;
+  background: blue;
+  height: calc(100vh - 67px);
+}
+.loginBgContainer h2 {
+  width: 30%;
+}
+.loginBgContainer img {
+  width: 50%;
+}
+
+.notesForm,
+.addNoteInput {
+  border: 2px solid black;
+}
+
+.notesForm {
+  padding: 10px;
+}
+.notesForm textarea {
+  margin-bottom: 10px;
+}
+
+.formUl {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.formLi {
+  width: 16.6666666667%;
+  margin-bottom: 10px;
+}
+.formLi:not(:last-child) {
+  margin-right: 10px;
+}
+
+textarea {
+  width: 100%;
+  height: 100%;
+}
+
+.deleteButton {
+  background-color: red;
 }/*# sourceMappingURL=App.css.map */
