--- a/src/App.scss
+++ b/src/App.scss
@@ -1,2 +1,6 @@
 @import './styles/setup';
+@import './styles/typography';
 @import './styles/baseStylings';
+@import './styles/header';
+@import './styles/login';
+@import './styles/form';
