Added edit/update functionality

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 @import './styles/setup';
 @import './styles/typography';
+@import './styles/variables';
 @import './styles/baseStylings';
 @import './styles/header';
 @import './styles/login';
