--- a/src/App.css
+++ b/src/App.css
@@ -324,16 +324,21 @@ textarea {
 
 header {
   min-width: 100%;
-  background: red;
+  background: rgb(0, 34, 82);
+}
+header h1 {
+  color: rgb(255, 255, 255);
 }
 header .wrapper {
   display: flex;
 }
 
 .loginBgContainer {
+  background: rgb(233, 235, 237);
+  height: calc(100vh - 57.9167px);
+}
+.loginBgContainer .wrapper {
   display: flex;
-  background: blue;
-  height: calc(100vh - 67px);
 }
 .loginBgContainer h2 {
   width: 30%;
@@ -342,7 +347,15 @@ header .wrapper {
   width: 50%;
 }
 
-.notesForm,
+.headerNav {
+  padding: 10px;
+  border-bottom: 1px solid black;
+}
+.headerNav .wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
 .addNoteInput {
   border: 2px solid black;
 }
@@ -352,16 +365,27 @@ header .wrapper {
 }
 .notesForm textarea {
   margin-bottom: 10px;
+  padding: 10px;
+  background: rgb(141, 217, 253);
+  outline: none;
+  border: 1px solid transparent;
+}
+.notesForm textarea:focus, .notesForm textarea:hover {
+  border: 1px solid rgb(0, 34, 82);
+  border-radius: 10px;
 }
 
 .formUl {
   display: flex;
   flex-wrap: wrap;
+  background: rgb(233, 235, 237);
 }
 
 .formLi {
   width: 16.6666666667%;
   margin-bottom: 10px;
+  background: rgb(141, 217, 253);
+  border-radius: 10px;
 }
 .formLi:not(:last-child) {
   margin-right: 10px;
