--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -1,4 +1,3 @@
-.notesForm,
 .addNoteInput {
     border: 2px solid black;
 }
@@ -8,17 +7,30 @@
 
     textarea {
         margin-bottom: 10px;
+        padding: 10px;
+        background: $tertiaryColor;
+        outline: none;
+        border: 1px solid transparent;
+
+        &:focus,
+        &:hover {
+            border: 1px solid $secondaryColor;
+            border-radius: 10px;
+        }
     }
 }
 
 .formUl {
     display: flex;
     flex-wrap: wrap;
+    background: $grayColor;
 }
 
 .formLi {
     width: calc(100%/6);
     margin-bottom: 10px;
+    background: $tertiaryColor;
+    border-radius: 10px;
 
     &:not(:last-child) {
         margin-right: 10px;
