revised textarea errors

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,11 @@
+// colors
 $primaryColor: rgb(233, 235, 237);
 $secondaryColor: rgb(0, 34, 82);
 $tertiaryColor: rgb(141, 217, 253);
 $grayColor: rgb(233, 235, 237);
-
 $white: rgb(255, 255, 255);
+
+
+// fonts
+$baseFont: 'Hind', sans-serif;
+$headingFont: 'Montserrat', sans-serif;
