--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,9 @@
 @import './styles/setup';
 @import './styles/variables';
+@import './styles/mixins';
 @import './styles/typography';
 @import './styles/baseStylings';
 @import './styles/header';
+@import './styles/body';
 @import './styles/login';
 @import './styles/form';
