--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,6 +1,6 @@
 header {
     min-width: 100%;
-    background: $secondaryColor;
+    background: $primaryColor;
 
     h1 {
         color: $white;
