--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,8 +1,10 @@
 // colors
-$primaryColor: rgb(233, 235, 237);
-$secondaryColor: rgb(0, 34, 82);
-$tertiaryColor: rgb(141, 217, 253);
+$primaryColor: rgb(137, 104, 125);
+$secondaryColor: rgb(252, 216, 204);
+$tertiaryColor: rgb(255, 247, 236);
+$accentColor: rgb(167, 224, 233);
 $grayColor: rgb(233, 235, 237);
+$black: rgb(0, 0, 0);
 $white: rgb(255, 255, 255);
 
 
