--- a/src/App.css
+++ b/src/App.css
@@ -324,6 +324,10 @@ textarea {
   border: none;
 }
 
+button:hover {
+  cursor: pointer;
+}
+
 header {
   min-width: 100%;
   background: rgb(137, 104, 125);
@@ -344,6 +348,11 @@ body .notesContainer {
 }
 body .sideNav {
   width: 10%;
+  text-align: right;
+}
+body .bodyContainer {
+  display: flex;
+  margin: 50px 0 0 0;
 }
 
 .loginBgContainer {
@@ -371,34 +380,19 @@ body .sideNav {
   justify-content: space-between;
 }
 .headerNav .loginBtn {
-  color: white;
+  color: rgb(0, 0, 0);
   padding: 10px 15px;
-  background: transparent;
-  border: 1px solid black;
-  transition: 300ms;
-}
-.headerNav .loginBtn:hover, .headerNav .loginBtn:focus {
   background: rgb(252, 216, 204);
-  color: black;
+  border: 1px solid black;
+  transition: 500ms;
+}
+.headerNav .loginBtn:hover {
+  background: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
 }
 
 .addNoteInput {
   border: 2px solid black;
-}
-
-.notesForm {
-  padding: 10px;
-}
-.notesForm textarea {
-  margin-bottom: 10px;
-  padding: 10px;
-  background: rgb(255, 247, 236);
-  outline: none;
-  border: 1px solid transparent;
-}
-.notesForm textarea:focus, .notesForm textarea:hover {
-  border: 1px solid rgb(252, 216, 204);
-  border-radius: 10px;
 }
 
 .formUl {
@@ -408,21 +402,89 @@ body .sideNav {
   align-items: center;
   background: rgb(233, 235, 237);
 }
-
-.formLi {
-  margin-bottom: 10px;
-  background: rgb(255, 247, 236);
-  border-radius: 10px;
+.formUl .notesForm {
+  padding: 10px;
 }
-.formLi:not(:last-child) {
-  margin-right: 10px;
-}
-
-textarea {
+.formUl .notesForm textarea {
   width: 100%;
   height: 100%;
+  margin-bottom: 10px;
+  padding: 10px;
+  background: rgb(252, 216, 204);
+  outline: none;
+  border: 2px solid transparent;
+  margin-top: 25px;
+}
+.formUl .notesForm textarea:focus, .formUl .notesForm textarea:hover {
+  border: 2px solid rgb(0, 0, 0);
+  border-radius: 10px;
+}
+.formUl .formLi {
+  margin-bottom: 10px;
+  background: rgb(252, 216, 204);
+  border-radius: 10px;
+  position: relative;
+}
+.formUl .formLi:not(:last-child) {
+  margin-right: 10px;
+}
+.formUl .deleteButton {
+  background-color: red;
+  position: absolute;
+  right: 10px;
+  background: transparent;
+  border: none;
+  transition: 500ms;
+}
+.formUl .deleteButton:hover, .formUl .deleteButton:focus {
+  color: red;
+}
+.formUl .saveButton {
+  background: rgb(1, 120, 1);
+  color: rgb(255, 255, 255);
+  border: none;
+  border-radius: 10px;
+  transition: 300ms;
+  padding: 10px 20px;
+  margin-right: 10px;
+}
+.formUl .saveButton:hover {
+  background: rgb(137, 104, 125);
+  color: rgb(255, 255, 255);
+}
+.formUl .notesRight {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.formUl .dateLabelSpan {
+  font-weight: bold;
+  margin-right: 5px;
 }
 
-.deleteButton {
-  background-color: red;
+.notesContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.notesContainer .addNoteBtn {
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 5px;
+  padding: 3px 5px;
+  margin-bottom: 25px;
+  transition: 300ms;
+}
+.notesContainer .addNoteBtn:focus, .notesContainer .addNoteBtn:hover {
+  background: rgb(137, 104, 125);
+  color: rgb(255, 255, 255);
+}
+
+.noteInput {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.noteInput textarea {
+  padding: 10px;
 }/*# sourceMappingURL=App.css.map */
