--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -2,23 +2,6 @@
     border: 2px solid black;
 }
 
-.notesForm {
-    padding: 10px;
-
-    textarea {
-        margin-bottom: 10px;
-        padding: 10px;
-        background: $tertiaryColor;
-        outline: none;
-        border: 1px solid transparent;
-
-        &:focus,
-        &:hover {
-            border: 1px solid $secondaryColor;
-            border-radius: 10px;
-        }
-    }
-}
 
 .formUl {
     display: flex;
@@ -26,23 +9,107 @@
     justify-content: center;
     align-items: center;
     background: $grayColor;
-}
 
-.formLi {
-    margin-bottom: 10px;
-    background: $tertiaryColor;
-    border-radius: 10px;
+    .notesForm {
+        padding: 10px;
+    
+        textarea {
+            width: 100%;
+            height: 100%;
+            margin-bottom: 10px;
+            padding: 10px;
+            background: $secondaryColor;
+            outline: none;
+            border: 2px solid transparent;
+            margin-top: 25px;
 
-    &:not(:last-child) {
+            &:focus,
+            &:hover {
+                border: 2px solid $black;
+                border-radius: 10px;
+            }
+        }
+    }
+
+    .formLi {
+        margin-bottom: 10px;
+        background: $secondaryColor;
+        border-radius: 10px;
+        position: relative;;
+    
+        &:not(:last-child) {
+            margin-right: 10px;
+        }
+    }
+
+    .deleteButton {
+        background-color: red;
+        position: absolute;
+        right: 10px;
+        background: transparent;
+        border: none;
+        transition: 500ms;
+    
+        &:hover,
+        &:focus {
+            color: red;
+        }
+    }
+    
+    .saveButton {
+        background: rgb(1, 120, 1);
+        color: $white;
+        border: none;
+        border-radius: 10px;
+        transition: 300ms;
+        padding: 10px 20px;
         margin-right: 10px;
+
+        &:hover {
+            background: $primaryColor;
+            color: $white;
+        }
+    }
+
+    .notesRight {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+    }
+
+    .dateLabelSpan {
+        font-weight: bold;
+        margin-right: 5px;
     }
 }
 
-textarea {
-    width: 100%;
-    height: 100%;
+.notesContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .addNoteBtn {
+        border: 1px solid $black;
+        border-radius: 5px;
+        padding: 3px 5px;
+        margin-bottom: 25px;
+        transition: 300ms;
+        
+        &:focus,
+        &:hover {
+            background: $primaryColor;
+            color: $white;
+        }
+    }
 }
 
-.deleteButton {
-    background-color: red;
+.noteInput {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    textarea {
+        padding: 10px;
+    }
 }
