--- a/src/App.css
+++ b/src/App.css
@@ -294,7 +294,7 @@ h2 {
 }
 
 .wrapper {
-  max-width: 1400px;
+  max-width: 1500px;
   width: 80%;
   margin: 0 auto;
 }
@@ -328,6 +328,12 @@ button:hover {
   cursor: pointer;
 }
 
+textarea,
+input {
+  outline: none;
+  padding: 10px;
+}
+
 header {
   min-width: 100%;
   background: rgb(137, 104, 125);
@@ -341,10 +347,12 @@ header .wrapper {
 
 body {
   background-color: rgb(233, 235, 237);
+  width: 100%;
 }
 body .notesContainer {
-  width: 75%;
-  margin: 0 auto;
+  width: 90%;
+  position: absolute;
+  right: 0px;
 }
 body .sideNav {
   width: 10%;
@@ -356,7 +364,7 @@ body .bodyContainer {
 }
 
 .loginBgContainer {
-  height: calc(100vh - 65.5333px);
+  height: calc(100vh - 65.3333px);
   width: 100%;
 }
 .loginBgContainer .wrapper {
@@ -409,21 +417,20 @@ body .bodyContainer {
   width: 100%;
   height: 100%;
   margin-bottom: 10px;
-  padding: 10px;
-  background: rgb(252, 216, 204);
-  outline: none;
-  border: 2px solid transparent;
+  background: rgb(255, 255, 255);
+  border: 1.5px solid transparent;
   margin-top: 25px;
 }
 .formUl .notesForm textarea:focus, .formUl .notesForm textarea:hover {
-  border: 2px solid rgb(0, 0, 0);
+  border: 1.5px solid rgba(0, 0, 0, 0.5);
   border-radius: 10px;
 }
 .formUl .formLi {
   margin-bottom: 10px;
-  background: rgb(252, 216, 204);
+  background: rgb(255, 255, 255);
   border-radius: 10px;
   position: relative;
+  box-shadow: 0.5px 0.5px 3px 0.5px rgba(0, 0, 0, 0.2);
 }
 .formUl .formLi:not(:last-child) {
   margin-right: 10px;
@@ -440,17 +447,21 @@ body .bodyContainer {
   color: red;
 }
 .formUl .saveButton {
-  background: rgb(1, 120, 1);
-  color: rgb(255, 255, 255);
-  border: none;
+  background: rgb(167, 224, 233);
+  color: rgb(0, 0, 0);
+  border: 1px solid transparent;
   border-radius: 10px;
   transition: 300ms;
-  padding: 10px 20px;
+  padding: 5px 10px;
   margin-right: 10px;
 }
 .formUl .saveButton:hover {
-  background: rgb(137, 104, 125);
-  color: rgb(255, 255, 255);
+  background: rgb(167, 224, 233);
+  border: 1px solid rgb(0, 0, 0);
+  color: rgb(0, 0, 0);
+}
+.formUl .saveButton:active {
+  background: rgb(99, 177, 189);
 }
 .formUl .notesRight {
   display: flex;
@@ -487,4 +498,61 @@ body .bodyContainer {
 }
 .noteInput textarea {
   padding: 10px;
+  outline: none;
+  transition: 500ms;
+  border: 3px solid rgb(0, 0, 0);
+}
+.noteInput textarea:focus, .noteInput textarea:hover {
+  border: 3px solid rgb(137, 104, 125);
+}
+.noteInput .submitNoteBtn {
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 5px;
+  padding: 3px 5px;
+  margin: 10px 0 30px 0;
+  transition: 300ms;
+}
+
+.contactUsForm {
+  text-align: center;
+  max-width: 400px;
+}
+.contactUsForm h2 {
+  margin-bottom: 20px;
+}
+.contactUsForm form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.contactUsForm input {
+  width: 100%;
+  border: none;
+  margin-bottom: 15px;
+}
+.contactUsForm .nameFlexContainer {
+  display: flex;
+}
+.contactUsForm .nameFlexContainer input:not(:last-child) {
+  margin-right: 20px;
+}
+.contactUsForm textarea {
+  width: 100%;
+}
+.contactUsForm input,
+.contactUsForm textarea {
+  border-bottom: 3px solid transparent;
+}
+.contactUsForm input:focus, .contactUsForm input:hover,
+.contactUsForm textarea:focus,
+.contactUsForm textarea:hover {
+  border-bottom: 3px solid rgb(137, 104, 125);
+}
+.contactUsForm button {
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 5px;
+  padding: 3px 5px;
+  margin: 10px 0 30px 0;
+  transition: 300ms;
 }/*# sourceMappingURL=App.css.map */
