--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -17,15 +17,13 @@
             width: 100%;
             height: 100%;
             margin-bottom: 10px;
-            padding: 10px;
-            background: $secondaryColor;
-            outline: none;
-            border: 2px solid transparent;
+            background: $white;
+            border: 1.5px solid transparent;
             margin-top: 25px;
 
             &:focus,
             &:hover {
-                border: 2px solid $black;
+                border: 1.5px solid rgba($color: $black, $alpha: 0.5);
                 border-radius: 10px;
             }
         }
@@ -33,9 +31,10 @@
 
     .formLi {
         margin-bottom: 10px;
-        background: $secondaryColor;
+        background: $white;
         border-radius: 10px;
         position: relative;;
+        box-shadow: 0.5px 0.5px 3px 0.5px rgba($color: $black, $alpha: 0.2);
     
         &:not(:last-child) {
             margin-right: 10px;
@@ -57,17 +56,22 @@
     }
     
     .saveButton {
-        background: rgb(1, 120, 1);
-        color: $white;
-        border: none;
+        background: $accentColor;
+        color: $black;
+        border: 1px solid transparent;
         border-radius: 10px;
         transition: 300ms;
-        padding: 10px 20px;
+        padding: 5px 10px;
         margin-right: 10px;
 
         &:hover {
-            background: $primaryColor;
-            color: $white;
+            background: $accentColor;
+            border: 1px solid $black;
+            color: $black;
+        }
+
+        &:active {
+            background: rgb(99, 177, 189);
         }
     }
 
@@ -111,5 +115,21 @@
 
     textarea {
         padding: 10px;
+        outline: none;
+        transition: 500ms;
+        border: 3px solid $black;
+
+        &:focus,
+        &:hover {
+            border: 3px solid $primaryColor;
+        }
+    }
+
+    .submitNoteBtn {
+        border: 1px solid $black;
+        border-radius: 5px;
+        padding: 3px 5px;
+        margin: 10px 0 30px 0;
+        transition: 300ms;
     }
 }
