--- a/src/App.css
+++ b/src/App.css
@@ -293,6 +293,11 @@ h2 {
   font-size: 1.5rem;
 }
 
+.headerNav a {
+  font-size: 25px;
+  font-size: 1.25rem;
+}
+
 .wrapper {
   max-width: 1500px;
   width: 80%;
@@ -344,39 +349,19 @@ header h1 {
 header .wrapper {
   display: flex;
 }
-
-body {
-  background-color: rgb(233, 235, 237);
-  width: 100%;
-}
-body .notesContainer {
-  width: 90%;
-  position: absolute;
-  right: 0px;
-}
-body .sideNav {
-  width: 10%;
-  text-align: right;
-}
-body .bodyContainer {
-  display: flex;
-  margin: 50px 0 0 0;
-}
-
-.loginBgContainer {
-  height: calc(100vh - 65.3333px);
-  width: 100%;
-}
-.loginBgContainer .wrapper {
+header .headerRightContainer {
   display: flex;
   align-items: center;
 }
-.loginBgContainer h2 {
-  color: rgba(0, 0, 0, 0.8);
-  width: 30%;
+
+.headerNavLinks {
+  display: flex;
 }
-.loginBgContainer img {
-  width: 80%;
+.headerNavLinks li:not(:last-child) {
+  margin-right: 20px;
+}
+.headerNavLinks:last-child {
+  margin-right: 25px;
 }
 
 .headerNav {
@@ -388,15 +373,57 @@ body .bodyContainer {
   justify-content: space-between;
 }
 .headerNav .loginBtn {
-  color: rgb(0, 0, 0);
-  padding: 10px 15px;
-  background: rgb(252, 216, 204);
+  color: rgb(255, 255, 255);
+  padding: 5px 10px;
+  background: rgb(0, 0, 0);
   border: 1px solid black;
   transition: 500ms;
 }
 .headerNav .loginBtn:hover {
-  background: rgb(0, 0, 0);
+  background: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+}
+.headerNav a {
   color: rgb(255, 255, 255);
+  border-bottom: 2px solid transparent;
+  transition: 500ms;
+}
+.headerNav a:focus, .headerNav a:hover {
+  border-bottom: 2px solid black;
+}
+
+body {
+  background-color: rgb(233, 235, 237);
+  width: 100%;
+}
+body .notesContainer {
+  width: 100%;
+}
+body .bodyContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 50px 0 0 0;
+}
+body .welcomePgImg {
+  max-width: 50%;
+}
+
+.loginBgContainer {
+  min-height: calc(100vh - 65.5333px);
+  width: 100%;
+}
+.loginBgContainer .wrapper {
+  display: flex;
+  align-items: center;
+}
+.loginBgContainer h2 {
+  color: rgba(0, 0, 0, 0.8);
+  width: 30%;
+}
+.loginBgContainer img {
+  width: 70%;
 }
 
 .addNoteInput {
@@ -477,6 +504,10 @@ body .bodyContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 50px;
+}
+.notesContainer h2 {
+  margin-bottom: 15px;
 }
 .notesContainer .addNoteBtn {
   border: 1px solid rgb(0, 0, 0);
@@ -507,6 +538,7 @@ body .bodyContainer {
 }
 .noteInput .submitNoteBtn {
   border: 1px solid rgb(0, 0, 0);
+  background: rgb(255, 255, 255);
   border-radius: 5px;
   padding: 3px 5px;
   margin: 10px 0 30px 0;
@@ -515,7 +547,8 @@ body .bodyContainer {
 
 .contactUsForm {
   text-align: center;
-  max-width: 400px;
+  max-width: 600px;
+  margin-top: 50px;
 }
 .contactUsForm h2 {
   margin-bottom: 20px;
@@ -533,6 +566,7 @@ body .bodyContainer {
 }
 .contactUsForm .nameFlexContainer {
   display: flex;
+  width: 100%;
 }
 .contactUsForm .nameFlexContainer input:not(:last-child) {
   margin-right: 20px;
