--- a/src/styles/_contactUsForm.scss
+++ b/src/styles/_contactUsForm.scss
@@ -1,6 +1,7 @@
 .contactUsForm {
     text-align: center;
-    max-width: 400px;
+    max-width: 600px;
+    margin-top: 50px;
 
     h2 {
         margin-bottom: 20px;
@@ -21,6 +22,7 @@
 
     .nameFlexContainer {
         display: flex;
+        width: 100%;
 
         input:not(:last-child) {
             margin-right: 20px;
