--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -2,7 +2,6 @@
     border: 2px solid black;
 }
 
-
 .formUl {
     display: flex;
     flex-wrap: wrap;
@@ -91,6 +90,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 50px;
+
+    h2 {
+        margin-bottom: 15px;
+    }
 
     .addNoteBtn {
         border: 1px solid $black;
@@ -127,6 +131,7 @@
 
     .submitNoteBtn {
         border: 1px solid $black;
+        background: $white;
         border-radius: 5px;
         padding: 3px 5px;
         margin: 10px 0 30px 0;
