--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
 @import './styles/variables';
 @import './styles/mixins';
 @import './styles/typography';
+@import './styles/mediaQueries';
 @import './styles/baseStylings';
 @import './styles/header';
 @import './styles/body';
