--- a/src/styles/_contactUsForm.scss
+++ b/src/styles/_contactUsForm.scss
@@ -36,6 +36,7 @@
     input, 
     textarea {
         border-bottom: 3px solid transparent;
+        box-shadow: 0.5px 0.5px 3px 0.5px rgba($color: $black, $alpha: 0.2);
         
         &:focus,
         &:hover {
