--- a/src/App.scss
+++ b/src/App.scss
@@ -9,4 +9,5 @@
 @import './styles/login';
 @import './styles/form';
 @import './styles/contactUsForm';
+@import './styles/filter';
 @import './styles/footer';
