--- a/src/styles/_contactUsForm.scss
+++ b/src/styles/_contactUsForm.scss
@@ -37,7 +37,8 @@
     textarea {
         border-bottom: 3px solid transparent;
         box-shadow: 0.5px 0.5px 3px 0.5px rgba($color: $black, $alpha: 0.2);
-        
+        transition: 300ms;
+
         &:focus,
         &:hover {
             border-bottom: 3px solid $primaryColor;
@@ -45,10 +46,18 @@
     }
 
     button {
-        border: 1px solid $black;
-        border-radius: 5px;
-        padding: 3px 5px;
-        margin: 10px 0 30px 0;
-        transition: 300ms;
+        border: none;
+        height: 100%;
+        background: $primaryColor;
+        color: $white;
+        padding: 0 20px;
+        transition: 500ms;
+        margin-top: 20px;
+    
+        &:hover,
+        &:focus {
+            background: $black;
+            color: $white;
+        }
     }
 }
