--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -90,7 +90,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 50px;
+    margin: 50px 0;
 
     h2 {
         margin-bottom: 15px;
