--- a/src/styles/_contactUsForm.scss
+++ b/src/styles/_contactUsForm.scss
@@ -2,7 +2,8 @@
     text-align: center;
     max-width: 600px;
     margin-top: 50px;
-
+    height: 100%;
+    
     h2 {
         margin-bottom: 20px;
     }
