Updated favicon. Implemented case insensitive to filter. Removed console.logs and fixed minor issues mentioned in pull request comments.

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -4,4 +4,14 @@ footer {
     text-align: center;
     padding: 5.5px;
     border-top: 1px solid $black;
+
+    a {
+        color: white;
+        transition: 300ms;
+
+        &:hover,
+        &:focus {
+            color: $black;
+        }
+    }
 }
