--- a/src/styles/_contactUsForm.scss
+++ b/src/styles/_contactUsForm.scss
@@ -48,7 +48,7 @@
 
     button {
         border: none;
-        height: 100%;
+        height: 49px;
         background: $primaryColor;
         color: $white;
         padding: 0 20px;
