--- a/src/App.css
+++ b/src/App.css
@@ -332,12 +332,19 @@ h2 {
     font-size: 20px;
     font-size: 1rem;
   }
+  .nameFlexContainer {
+    flex-direction: column;
+  }
 }
 @media (max-width: 400px) {
-  .clearForm button {
-    display: block;
-    margin: 0 auto;
-    margin-top: 20px;
+  .headerNav .wrapper {
+    width: 100%;
+  }
+  .clearForm {
+    justify-content: center;
+  }
+  .clearForm input {
+    width: 60%;
   }
 }
 .wrapper {
@@ -452,7 +459,7 @@ body .welcomePgImg {
 }
 
 .loginBgContainer {
-  min-height: calc(100vh - 100px);
+  min-height: calc(100vh - 108px);
   width: 100%;
 }
 .loginBgContainer .wrapper {
@@ -630,7 +637,7 @@ body .welcomePgImg {
 }
 .contactUsForm button {
   border: none;
-  height: 100%;
+  height: 49px;
   background: rgb(137, 104, 125);
   color: rgb(255, 255, 255);
   padding: 0 20px;
@@ -644,7 +651,7 @@ body .welcomePgImg {
 
 .clearForm {
   margin-bottom: 25px;
-  height: 100%;
+  display: flex;
 }
 .clearForm button,
 .clearForm input {
@@ -652,7 +659,6 @@ body .welcomePgImg {
 }
 .clearForm button {
   border: none;
-  height: 49px;
   background: rgb(137, 104, 125);
   color: rgb(255, 255, 255);
   padding: 0 20px;
@@ -676,4 +682,11 @@ footer {
   text-align: center;
   padding: 5.5px;
   border-top: 1px solid rgb(0, 0, 0);
+}
+footer a {
+  color: white;
+  transition: 300ms;
+}
+footer a:hover, footer a:focus {
+  color: rgb(0, 0, 0);
 }/*# sourceMappingURL=App.css.map */
