--- a/src/styles/_mediaQueries.scss
+++ b/src/styles/_mediaQueries.scss
@@ -10,7 +10,6 @@
             }
         }
 
-
         img {
             margin-top: 50px;
             width: 100%;
@@ -25,7 +24,6 @@
 
 @media (max-width: 700px) {
     .headerNav {
-
         h1 {
             margin-bottom: 20px;
         }
@@ -47,12 +45,23 @@
             @include fontSize(20);
         }
     }
+
+    .nameFlexContainer {
+        flex-direction: column;
+    }
 }
 
 @media (max-width: 400px) {
-    .clearForm button {
-        display: block;
-        margin: 0 auto;
-        margin-top: 20px;
+    .headerNav {
+        .wrapper {
+            width: 100%;
+        }
+    }
+    .clearForm {
+        justify-content: center;
+
+        input {
+            width: 60%;
+        }
     }
 }
